# lfric_reader

./: LICENSE  README.md  Singularity  Singularity-GUI  Singularity-headless  pyproject.toml  setup.cfg  setup.py
Documentation/: Doxyfile.in
src/cxx/: CMakeLists.txt  netCDFLFRicFile.cxx  netCDFLFRicFile.h  netCDFLFRicReader.xml  netCDFLFRicReaderUtils.cxx  netCDFLFRicReaderUtils.h  vtkNetCDFLFRicReader.cxx  vtkNetCDFLFRicReader.h
src/cxx/Plugin/: CMakeLists.txt  paraview.plugin
src/cxx/Plugin/Reader/: CMakeLists.txt  netCDFLFRicFile.cxx  netCDFLFRicFile.h  netCDFLFRicReader.xml  netCDFLFRicReaderUtils.cxx  netCDFLFRicReaderUtils.h  vtk.module  vtkNetCDFLFRicReader.cxx  vtkNetCDFLFRicReader.h
src/cxx/Plugin/Reader/test/: CMakeLists.txt  catch_main.cxx  generate_testfile.cxx  generate_testfile.h  netCDFLFRicFileUnitTest.cxx  netCDFLFRicReaderUtilsUnitTest.cxx  vtkNetCDFLFRicReaderLeakTest.cxx  vtkNetCDFLFRicReaderRegressionTest.cxx  vtkNetCDFLFRicReaderUnitTest.cxx
src/cxx/test/: CMakeLists.txt  catch_main.cxx  generate_testfile.cxx  generate_testfile.h  netCDFLFRicFileUnitTest.cxx  netCDFLFRicReaderLeakTest.cxx  netCDFLFRicReaderUnitTest.cxx  vtkNetCDFLFRicReaderRegressionTest.cxx  vtkNetCDFLFRicReaderUnitTest.cxx
src/python/: paraview_script.py  replace_ugrid_metadata.py
src/python/test/: test_replace_ugrid_metadata.py
